app/base/apps/jobs-dashboard/jobs-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-dashboard
  namespace: default
  annotations:
    configmap.reloader.stakater.com/reload: "reload-trigger"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-dashboard
  template:
    metadata:
      labels:
        app: jobs-dashboard
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: jobs-dashboard
        image: sportdeets.azurecr.io/sportsdatajobsdashboard:latest
        imagePullPolicy: Always
        command: ["dotnet"]
        args: ["SportsData.JobsDashboard.dll"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 256Mi
            cpu: "500m"
