app/base/apps/jobs-dashboard/jobs-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobs-dashboard-svc
  namespace: default
  labels:
    app: jobs-dashboard
spec:
  selector:
    app: jobs-dashboard
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
